ifds/src/tests/ir/snapshots/ifds__tests__ir__wat__test_fac_reversed.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 1) (define %0 %1 %2 %3 %4 %5 %6 %7 %8 %9 %10 %11) {
BLOCK 0
%1 = %0
%2 = 0
%3 = %2 op %1
IF %3 THEN GOTO 1 ELSE GOTO 2
BLOCK 1 
%4 = %0
%5 = %0
%6 = 1
%7 = %6 op %5
%8 <- CALL 0(%7)
%9 = %8 op %7
KILL %8
KILL %7
KILL %6
KILL %5
KILL %4
GOTO 3
BLOCK 2
%10 = 1
GOTO 3
BLOCK 3
%11 = phi %9 %10
RETURN %11;
};

