ifds/src/tests/ir/snapshots/ifds__tests__ir__wat__test_global_call.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (param %0) (result 0) (define %-2 %-1 %0 %1) {
BLOCK 0
%1 = %0
%-1 = %1
RETURN ;
};
define 1 (param %0) (result 0) (define %-2 %-1 %0 %1 %2) {
BLOCK 1
%1 = 1
CALL 0(%1)
%2 = %0
%-2 = %2
RETURN ;
};

