ifds/src/tests/ir/snapshots/ifds__tests__ir__wat__test_memory_load.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 0) (define %0 %1 %2 %3 %4 %5 %6 %7) {
BLOCK 0
%0 = 8
%1 = -12345
STORE %1 AT 0 + %0 ALIGN 2 32
%2 = 8
%3 = -12345
STORE %3 AT 0 + %2 ALIGN 3 64
%4 = 8
%5 = LOAD %4 OFFSET 0 ALIGN 0
%6 = 8
%7 = LOAD %6 OFFSET 0 ALIGN 0
KILL %7
KILL %6
RETURN ;
};

