ifds/src/tests/ir/snapshots/ifds__tests__ir__wat__test_memory_store.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 0) (define %0 %1 %2 %3 %4 %5 %6 %7) {
BLOCK 0
%0 = 8
%1 = -12345
STORE FROM %1 OFFSET 0 + %0 ALIGN 2 32
%2 = 8
%3 = -12345
STORE FROM %3 OFFSET 0 + %2 ALIGN 3 64
%4 = 8
%5 = -12345
STORE FROM %5 OFFSET 0 + %4 ALIGN 2 32
%6 = 8
%7 = -12345
STORE FROM %7 OFFSET 0 + %6 ALIGN 3 64
RETURN ;
};

